-UX revisions
-SEO for project page / README.txt on Github
-Meta robots html tag for app installs to not be indexed by search engines
-Updated Resources page
-------------------------------------------------------------------



-------------------------------------------------------------------
3.13.0:
-Portfolio dominance stats summary info bubble for all held assets (hovering over info icon in stats summary @ bottom of portfolio page)
-Secure backup archives system
-Chart backups option
-Config settings semantics
-------------------------------------------------------------------



-------------------------------------------------------------------
3.13.1:
-Bug fix for chart backups config validating (and error reporting)
-------------------------------------------------------------------



-------------------------------------------------------------------
3.14.0:
-Chart data archiving config switched to every X days (better UX as data size grows)
-Backup archiving logic moved into reusable module
-Misc. UX revisions
-------------------------------------------------------------------



-------------------------------------------------------------------
3.15.0:
-UX revisions
-Feature to enable charts and alerts separately if desired (includes config file formatting changes)
-USDC base pairing support
-Bittrex International market naming (semantics)
-------------------------------------------------------------------



-------------------------------------------------------------------
3.15.1:
-Bug fix in Bittrex International market naming (semantics) interfacing
-Minor UX revisions
-------------------------------------------------------------------



-------------------------------------------------------------------
3.16.0:
-Chart update frequency now automatically determined (manually-adjusted $charts_update_freq in config file no longer needed / removed)
-Minor UX revisions
-------------------------------------------------------------------







